# strider

./: README.md  app.js  pyproject.toml
.github/workflows/: deploy-web.yml
src/strider/: __init__.py  calculator.py  cli.py  config.py  help_text.py
tests/: test_calculator.py  test_cli.py  test_config.py
web/: help.html  index.html
web/assets/css/: base.css  components.css  layout.css  style.css  tokens.css  utilities.css
web/assets/js/: app.js
